mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: project-3
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: mysql
  serviceName: mysql
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: project-3
        app.kubernetes.io/component: database
        app.kubernetes.io/instance: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:latest
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-persistant-storage
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: mysql-persistant-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
