products-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-microservice
  namespace: project-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: products-microservice
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 1 ## ensure that we don't have more than 3 pod replicas
  template:
    metadata:
      labels:
        app.kubernetes.io/name: project-3
        app.kubernetes.io/component: backend
        app.kubernetes.io/instance: products-microservice
    spec:
      containers:
      - name: products-microservice
        # image: localhost:6500/project_1-products_service:latest # docker-desktop
        image: project_1-products_service:latest # minikube
        imagePullPolicy: Never # minikube
        resources:
          requests:
            memory: "128Mi"
            cpu: "128m"
          limits:
            memory: "128Mi"
        ports:
        - containerPort: 8001
