mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: project-3
spec:
  selector:
    app.kubernetes.io/instance: mysql
  ports:
  - port: 3306
    targetPort: 3306
