01-kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-ingress
  namespace: project-3
  annotations:
   konghq.com/strip-path: "false"
   konghq.com/plugins: api-auth, api-ratelimit    # Plugin names referenced in KongPlugin resources
   kubernetes.io/ingress.class: kong
   konghq.com/methods: "GET, POST"  
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/login"
        backend:
          service:
            name: login-microservice
            port: 
              number: 8000
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: products-microservice
            port: 
              number: 8001
